--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,28 +16,53 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_label_toast"
-        android:backgroundTint="#2196F3" />
+        android:backgroundTint="#2196F3"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
 
     <TextView
         android:id="@+id/show_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
         android:text="@string/count_initial_value"
         android:textSize="160sp"
         android:background="#FFFF00"
         android:gravity="center"
         android:layout_below="@id/button_toast"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp" />
+
 
     <Button
         android:id="@+id/button_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@id/button_toast"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/button_toast"
         android:backgroundTint="#2196F3"
-        android:text="@string/button_label_count" />
+        android:text="@string/button_label_count"
+        android:layout_alignParentTop="true" />
 
+
+    <Button
+        android:id="@+id/button_switchpage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/show_count"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/button_count"
+        android:backgroundTint="#2196F3"
+        android:text="@string/button_label_pindah"
+        android:layout_alignParentTop="true" />
+
+    <Button
+        android:id="@+id/button_browser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/button_switchpage"
+        android:backgroundTint="#2196F3"
+        android:layout_alignParentTop="true"
+        android:text="@string/button_label_browser" />
 
 </RelativeLayout>
